# hip-moi

./: .clang-format  .clangd  .gitignore  AGENTS.md  BENCHMARK_LOG.md  CMakeLists.txt  LICENSE.md  PLAN.md  README.md
benchmarks/: 010_cdna4_mfma_attention_block_benchmark.hip  010_gfx1250_wmma_attention_block_benchmark.hip  010_rdna4_wmma_attention_block_benchmark.hip  011_cdna4_d128_attention_block_benchmark.hip  011_gfx1250_d128_attention_block_benchmark.hip  011_rdna4_d128_attention_block_benchmark.hip  012_cdna4_d128_attention_pressure_benchmark.hip  012_gfx1250_d128_attention_pressure_benchmark.hip  012_rdna4_d128_attention_pressure_benchmark.hip  013_cdna4_mfma_register_handoff_benchmark.hip  013_gfx1250_wmma_register_handoff_benchmark.hip  014_cdna4_mfma_no_score_lds_attention_benchmark.hip  014_gfx1250_wmma_no_score_lds_attention_benchmark.hip  014_rdna4_wmma_no_score_lds_attention_benchmark.hip  015_cdna4_d128_no_score_lds_attention_benchmark.hip  015_gfx1250_d128_no_score_lds_attention_benchmark.hip  015_rdna4_d128_no_score_lds_attention_benchmark.hip  016_cdna4_pingpong_private_lds_benchmark.hip  016_gfx1250_pingpong_att_probe.hip  016_rdna4_pingpong_att_probe.hip  017_cdna4_pingpong_cooperative_lds_benchmark.hip  018_cdna4_pingpong_wide_cooperative_lds_benchmark.hip  018_gfx1250_pingpong_wide_cooperative_lds_benchmark.hip  018_rdna4_pingpong_wide_cooperative_lds_benchmark.hip  019_atomic_flag_handoff_benchmark.hip  020_atomic_metadata_benchmark.hip  021_atomic_happens_before_benchmark.hip  023_atomic_rmw_happens_before_benchmark.hip  024_atomic_or_bitmask_happens_before_benchmark.hip  025_atomic_fence_happens_before_benchmark.hip  026_streamk_flag_protocol_benchmark.hip  027_streamk_two_tile_flag_protocol_benchmark.hip  028_cdna4_mfma_streamk_arrival_counter_benchmark.hip  028_gfx1250_wmma_streamk_arrival_counter_benchmark.hip  028_rdna4_wmma_streamk_arrival_counter_benchmark.hip  029_cdna4_mfma_streamk_tree_atomic_or_benchmark.hip  029_gfx1250_wmma_streamk_tree_atomic_or_benchmark.hip  029_rdna4_wmma_streamk_tree_atomic_or_benchmark.hip  030_atomic_exchange_compare_exchange_benchmark.hip  031_atomic_fence_rmw_happens_before_benchmark.hip  (+30 more)
docs/: README.md  atomics.md  atomics_corpus.md  atomics_fast_paths.md  atomics_plan.md  benchmark_interpretation.md  coalescing.md  context.md  dbi_atomic_seeds.md  dbi_transition.md  instrumentation_model.md  loom_rfc_comparison.md  pingpong.md  scope.md
docs/tutorial/: 001_passing_syncthreads.hip  002_failing_cross_subgroup_race.hip  002_failing_same_epoch_race.hip  003_destructor_fallback.hip  004_rdna4_wmma_data_tiled_matmul.hip  005_context_cross_subgroup_race.hip  005_subgroup_level_cross_subgroup_race.hip  006_context_coalescing.hip  006_sampled_watchpoint_context.hip  006_subgroup_level_coalescing.hip  CMakeLists.txt  README.md  expect_failure.cmake
include/hip_moi/: common.hpp  context.hpp  hip_moi.hpp  host_context.hpp  sampled_watchpoint_context.hpp  shadow.hpp  subgroup_level_context.hpp  thread_level_context.hpp
tests/: CMakeLists.txt  README.md
tests/instrumented/: 001_safe_mvp_test.hip  001_single_subgroup_safe_mvp_test.hip  002_host_context_test.hip  002_race_mvp_test.hip  002_single_subgroup_race_mvp_test.hip  003_host_context_test.hip  003_site_id_test.hip  004_basic_conflict_predicate_test.hip  004_hard_synchronization_negative_test.hip  004_single_subgroup_basic_conflict_predicate_test.hip  005_epoch_boundary_test.hip  005_shadow_abi_test.hip  005_single_subgroup_epoch_boundary_test.hip  006_all_thread_array_test.hip  006_lds_offset_api_test.hip  006_single_subgroup_all_thread_array_test.hip  007_exact_shadow_backend_test.hip  007_metadata_capacity_test.hip  007_single_subgroup_metadata_capacity_test.hip  008_loop_epoch_test.hip  008_sampled_watchpoint_backend_test.hip  008_single_subgroup_loop_epoch_test.hip  009_attention_block_test.hip  009_single_subgroup_tiled_lds_test.hip  009_tiled_lds_test.hip  010_cdna4_mfma_attention_block_test.hip  010_gfx1250_wmma_attention_block_test.hip  010_matmul_like_test.hip  010_rdna4_wmma_attention_block_test.hip  010_single_subgroup_matmul_like_test.hip  011_cdna4_d128_attention_block_test.hip  011_epoch_log_lifetime_test.hip  011_gfx1250_d128_attention_block_test.hip  011_rdna4_d128_attention_block_test.hip  011_single_subgroup_epoch_log_lifetime_test.hip  012_cdna4_d128_attention_pressure_test.hip  012_gfx1250_d128_attention_pressure_test.hip  012_matmul_pipeline_test.hip  012_rdna4_d128_attention_pressure_test.hip  012_single_subgroup_matmul_pipeline_test.hip  (+68 more)
tests/reference/: README.md  atomic_reference_kernels.hip  mvp_reference_kernels.hip  rdna4_jakub_matmul_reference.hip
